--- a/miniprogram/pages/music/music.wxml
+++ b/miniprogram/pages/music/music.wxml
@@ -1,2 +1,7 @@
 <!--pages/music/music.wxml-->
-<text>pages/music/music.wxml</text>
+<swiper indicator-dots="true" indicator-active-color="#d43c33" autoplay="true"
+interval="3000" duration="1000" class="swiper">
+  <swiper-item wx:for="{{imgUrls}}">
+     <image src="{{item.url}}" class="img" mode="scaleToFill"></image>
+  </swiper-item>
+</swiper>
