--- a/miniprogram/pages/music/music.wxml
+++ b/miniprogram/pages/music/music.wxml
@@ -5,3 +5,9 @@ interval="3000" duration="1000" class="swiper">
      <image src="{{item.url}}" class="img" mode="scaleToFill"></image>
   </swiper-item>
 </swiper>
+<text class="title">推荐歌单</text>
+<view class="playlist-container">
+  <block wx:for="{{playlist}}" wx:key="id">
+    <qin-playlist playlist="{{item}}"></qin-playlist>
+  </block>
+</view>
