抓取歌单数据

--- a/miniprogram/pages/music/music.wxml
+++ b/miniprogram/pages/music/music.wxml
@@ -7,7 +7,7 @@ interval="3000" duration="1000" class="swiper">
 </swiper>
 <text class="title">推荐歌单</text>
 <view class="playlist-container">
-  <block wx:for="{{playlist}}" wx:key="id">
+  <block wx:for="{{playlist}}" wx:key="_id">
     <qin-playlist playlist="{{item}}"></qin-playlist>
   </block>
 </view>
