--- a/miniprogram/components/musiclist/musiclist.wxml
+++ b/miniprogram/components/musiclist/musiclist.wxml
@@ -2,7 +2,7 @@
 <block wx:for="{{musiclist}}" wx:key="id">
   <view class="musiclist-container {{item.id === playingId ? 'playing':''}}"
  bind:tap="onSelect" data-musicid="{{item.id}}" 
- data-index="index">
+ data-index="{{index}}">
   <view class="musiclist-index">{{index+1}}</view>
   <view class="musiclist-info">
     <view class="musiclist-name">{{item.name}}</view>
