--- a/miniprogram/pages/music/music.wxml
+++ b/miniprogram/pages/music/music.wxml
@@ -1,4 +1,9 @@
 <!--pages/music/music.wxml-->
+<qin-navbar>
+  <view class="current-date">
+     <text>4月24日</text>
+  </view>
+</qin-navbar>
 <swiper indicator-dots="true" indicator-active-color="#d43c33" autoplay="true"
 interval="3000" duration="1000" class="swiper">
   <swiper-item wx:for="{{imgUrls}}">
