--- a/miniprogram/components/input/input.wxml
+++ b/miniprogram/components/input/input.wxml
@@ -1,9 +1,4 @@
 <!--miniprogram/components/input/input.wxml-->
-
-  <view class="page-section">
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input">
-        <input class="weui-input" auto-focus placeholder="输入想找的歌曲/作者"/>
+      <view style=" width: 80%;height: 50rpx;border-radius:25%">
+        <input class="input"  auto-focus placeholder="输入想找的歌曲/作者"/>
       </view>
-    </view>
-  </view>
