--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -9,6 +9,10 @@
     <image class="player-img zhuan {{isPlaying?'':'ting'}}" src="{{picUrl}}"></image>
   </view>
 
+  <!-- 进度条 -->
+  <view class="progress-bar">
+    <qin-progress-bar bind:musicEnd="onNext" ></qin-progress-bar>
+  </view>
   <!-- 控制面板 -->
   <view class="control">
     <text class="iconfont icon-houtui" bind:tap="onPrev"></text>
