--- a/miniprogram/pages/player/player.wxss
+++ b/miniprogram/pages/player/player.wxss
@@ -99,3 +99,10 @@
   font-size: 120rpx;
   margin: 0 50rpx;
 }
+.progress-bar{
+  width:90%;
+  position: absolute;
+  left: 50%;
+  transform:translateX(-50%);
+  bottom: 24%;
+}
