--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -5,13 +5,14 @@
 
 <view class="player-info">
   <!-- 封面信息 -->
-  <view class="player-disc {{isPlaying?'playing':''}}">
+  <view class="player-disc {{isPlaying?'playing':''}}" hidden="{{isLyricShow}}" bind:tap="onLyricShow">
     <image class="player-img zhuan {{isPlaying?'':'ting'}}" src="{{picUrl}}"></image>
   </view>
-
+  <!-- 歌词 -->
+  <qin-lyric class="lyric" isLyricShow="{{isLyricShow}}" lyric="{{lyric}}" bind:tap="onLyricShow"></qin-lyric>
   <!-- 进度条 -->
   <view class="progress-bar">
-    <qin-progress-bar bind:musicEnd="onNext" ></qin-progress-bar>
+    <qin-progress-bar bind:musicEnd="onNext" bind:timeUpdate="timeUpdate"></qin-progress-bar>
   </view>
   <!-- 控制面板 -->
   <view class="control">
