--- a/miniprogram/components/lyric/lyric.wxss
+++ b/miniprogram/components/lyric/lyric.wxss
@@ -6,9 +6,9 @@
   color:#fff;
 }*/
 .lyric-scroll{
-  margin-top:50rpx;
+  margin-top:300rpx;
   width: 100%;
-  height:60%;
+  height:50%;
   color:#ccc;
   font-size: 32rpx;
 }
@@ -19,4 +19,7 @@
 }
 .lyric{
   min-height: 64rpx;
+}
+.hightlight-lyric {
+  color: #d43c33;
 }
