--- a/miniprogram/components/navbar/navbar.wxss
+++ b/miniprogram/components/navbar/navbar.wxss
@@ -1,8 +1,15 @@
 .nav {
+  opacity:0.7;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
+  height: 170rpx;
+  z-index: 1000;
+  background: #fc5c7d;  
+   background: -webkit-linear-gradient(to right, rgb(252, 92, 125), rgb(106, 130, 251));
+   background: linear-gradient(to right, rgb(252, 92, 125), rgb(106, 130, 251));
+  align-items: center;
 }
 .nav-main {
   width: 100%;
@@ -11,7 +18,14 @@
 }
 .nav .capsule-box {
   position: absolute;
-  box-sizing: border-box;
   width: 100%;
+ height: 50%;
+ bottom: 0;
+display: flex;
+justify-content: center;
+align-items: center;
 }
+
+
+
 
