--- a/miniprogram/pages/music/music.wxml
+++ b/miniprogram/pages/music/music.wxml
@@ -2,7 +2,7 @@
 <view class="nav">
 <qin-navbar id="bar">
   <view slot="content" style="width:300rpx;height:70%;display:flex;" hidden="{{!isNavBar}}">
-    <input class="input" />
+    <view class="input" bind:tap="goToFind"></view>
     <image src="http://first-bucket20201002.oss-cn-hangzhou.aliyuncs.com/img/img/logo/search.png" style="width:50rpx;height:50rpx;margin-left:-60rpx;"></image>
   </view>
   <view hidden="{{isNavBar}}">
