--- a/miniprogram/pages/musiclist/musiclist.wxss
+++ b/miniprogram/pages/musiclist/musiclist.wxss
@@ -1,4 +1,56 @@
 /* pages/musiclist/musiclist.wxss */
+.nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+  padding-bottom: 10rpx;
+}
+.title{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 100rpx;
+  font-size: 18px;
+  color: #fff;
+  z-index: 1003;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.icon-iconfont-left1 {
+  position: absolute;
+  left: 20rpx;
+  top: 96rpx;
+  font-size: 32px;
+  color: #fff;
+  z-index: 1003;
+}
+.blur-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: blur(40rpx);
+  opacity: 0.4;
+}
+.mask{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+}
+.info-container{
+  width: 100%;
+  height: 380rpx;
+  position: relative;
+  background-color: #ccc;
+}
 .detail-container {
   height: 320rpx;
   filter: blur(40rpx);
@@ -17,28 +69,58 @@
 
 .detail-info {
   display: flex;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
-  height: 320rpx;
-  padding: 20rpx;
+  height: 380rpx;
+  padding-top: 60rpx;
   box-sizing: border-box;
   align-items: center;
 }
-
+.detail-info .left{
+flex: 1 1 30%;
+box-sizing: border-box;
+padding-left:30rpx;
+}
 .detail-img {
-  width: 280rpx;
-  height: 280rpx;
+  width: 200rpx;
+  height: 200rpx;
   margin-right: 24rpx;
-  border-radius: 6rpx;
+  border-radius: 10rpx;
+}
+.detail-info .right {
+  flex: 1 1 70%;
+  box-sizing: border-box;
+  padding-left: 30rpx;
 }
 
 .detail-name {
   color:#FFFFFF;
-  font-size: 36rpx;
+  font-size: 32rpx;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 300;
+  margin-bottom: 20rpx;
+}
+.user-info{
+  display: flex;
+  align-items: center;
+  margin-bottom: 30rpx;
+}
+.user-info image {
+  width: 60rpx;
+  height: 60rpx;
+  border-radius: 50%;
+  margin-right: 30rpx;
+}
+.user-info text {
+  font-size: 26rpx;
+  color: #ccc;
+}
+.description {
+  font-size: 13px;
+  font-weight: 300;
+  color: #f6f6f6;
 }
 .share{
    width: 100%;
@@ -46,13 +128,14 @@
    align-items: center;
    margin-bottom: 8%;
    font-size:24rpx;
+   z-index: 100000;
 }
 
 .share-item{
   width: 70%;
   height: 95%;
   margin-left: 15%;
-  margin-top: 5%;
+  margin-top: -5%;
   margin-bottom: 50%;
   background-color: #FFFFFF;
   border-radius: 50rpx;
@@ -71,4 +154,25 @@
   border-width: 3rpx;
   border-right-style:solid;
   border-color:#dedede;
+}
+.content {
+  width: 100%;
+  margin-top: 60rpx;
+  padding-left: 20rpx;
+  box-sizing: border-box;
+}
+.ellipsis {
+  display:-webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.bottom {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 120rpx;
+  background-color: #f8f8f8;
 }
