--- a/miniprogram/components/input/input.wxml
+++ b/miniprogram/components/input/input.wxml
@@ -1,4 +1,5 @@
 <!--miniprogram/components/input/input.wxml-->
-      <view style=" width: 80%;height: 50rpx;border-radius:25%">
-        <input class="input"  auto-focus placeholder="   输入想找的歌曲/作者"/>
-      </view>
+<view class="container">
+    <input class="input" placeholder="{{placeholder}}" value='{{inputValue}}' bindinput="onInput" bindfocus="onFocus"></input>
+    <button class="search-btn" bind:tap="onSearch">搜索</button>
+    </view>
