--- a/miniprogram/pages/find/find.wxss
+++ b/miniprogram/pages/find/find.wxss
@@ -6,5 +6,28 @@
   height:70rpx;
   border-radius: 20rpx;
   background-color: #e6e6e6;
-  color: #ffffff;
    }
+   .header{
+    position: absolute;
+    height:100rpx;
+    width: 100%;
+    background-color:	#7B68EE;
+    margin-top: 170rpx;
+  }
+  .left{
+    display: flex;
+    width: 40rpx;
+    height: 65rpx;
+  }
+  .icon-bianji{
+    position: absolute;
+    top: 15rpx;
+    left: 30rpx;
+    font-size: 60rpx;
+  }
+  .right{
+    position: absolute;
+    margin-left: 100rpx;
+    margin-right:20rpx;
+    top: 15rpx;
+  }
