--- a/miniprogram/components/bottom-modal/bottom-modal.wxml
+++ b/miniprogram/components/bottom-modal/bottom-modal.wxml
@@ -1,6 +1,6 @@
 <view class="modal" hidden="{{!modalShow}}">
   <view class="panel">
-    <i class="iconfont icon-guanbi" bind:tap="onClose"></i> 
+    <i class="iconfont icon-close" bind:tap="onClose"></i> 
     <!-- slot插槽 具名插槽 -->
     <slot name="modal-content"></slot>
   </view>
