--- a/miniprogram/components/login/login.wxml
+++ b/miniprogram/components/login/login.wxml
@@ -1,5 +1,5 @@
 <qin-bottom-modal modalShow="{{modalShow}}">
   <view slot="modal-content">
-    <button class="login" open-type="getUserInfo" bindgetuserinfo="onGotUserInfo">获取授权信息</button>
+    <button class="login" open-type="getUserInfo" bindgetuserinfo="onGotoUserInfo">获取授权信息</button>
     </view>
 </qin-bottom-modal>
