--- a/miniprogram/pages/publish/publish.wxss
+++ b/miniprogram/pages/publish/publish.wxss
@@ -1,1 +1,106 @@
 /* miniprogram/pages/publish/publish.wxss */
+.container {
+  margin-top: 30rpx;
+  height: 1600rpx;
+  padding: 20rpx;
+  background-color:#e7e7e7 ;
+}
+
+.container .content {
+  width: 100%;
+  height: 360rpx;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #f6f6f6;
+  color: #333;
+  padding: 10rpx;
+}
+
+.container .image-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 20rpx;
+}
+
+.container .image-list .image-wrap {
+  width: 220rpx;
+  height: 220rpx;
+  margin-right: 10rpx;
+  margin-bottom: 10rpx;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+}
+
+.container .image-list .image-wrap .image {
+  width: 100%;
+  height: 100%;
+}
+
+.container .image-list .image-wrap .icon-shanchu {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40rpx;
+  height: 40rpx;
+  background-color: #000;
+  opacity: 0.4;
+  color: #fff;
+  text-align: center;
+  line-height: 40rpx;
+  font-size: 38rpx;
+  font-weight: bolder;
+}
+
+.selectphoto {
+  margin-left: -350rpx;
+  border: 2rpx dashed #ccc;
+  position: relative;
+  background-color: #f8f8f8;
+}
+
+.selectphoto .icon-tianjiatupian {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #ccc;
+  font-size: 90rpx;
+}
+
+.footer {
+  position: fixed;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 40rpx;
+  background: #f1f1f1;
+}
+
+.footer .words-num {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: right;
+  color: #474747;
+  font-size: 32rpx;
+  padding-right: 40rpx;
+}
+
+.footer .send-btn {
+  opacity: 0.6;
+  background-image: linear-gradient(to top,  #eaafc8 0%, #654ea3 100%);
+  color: #fff;
+  font-size: 28rpx;
+}
+/*# sourceMappingURL=publish.css.map */
