发布文章++文章显示

--- a/miniprogram/components/navbar1/navbar.wxml
+++ b/miniprogram/components/navbar1/navbar.wxml
@@ -4,7 +4,8 @@
       class="capsule-box" 
       style="height:{{menuHeight}}px; min-height:{{menuHeight}}px; line-height:{{menuHeight}}px; bottom:{{menuBotton}}px;left:{{menuRight}}px;"
     >
-    <slot name="content"></slot>
+    <slot name="content">
+    </slot>
     
     </view>
   </view>
