--- a/miniprogram/pages/publish/publish.wxml
+++ b/miniprogram/pages/publish/publish.wxml
@@ -1,9 +1,9 @@
 <qin-navbar class="nav">
-  <view slot="content" style="width:100rpx;height:70%;display:flex;color:#FFFFFF">
-    <text>发布</text>
+  <view slot="content" style="width:800rpx;height:70%;color:#FFFFFF">
+    <text class='iconfont icon-iconfont-left1' style="margin-left:40rpx;color: #fff;z-index:1000" bind:tap="back"></text> <text style="margin-left:260rpx;">发布</text>
   </view>
 </qin-navbar> 
-<text class='iconfont icon-iconfont-left1' style="margin-top:100rpx;margin-left:40rpx;color: #fff;z-index:1000"bind:tap="back"></text>
+
 <view class="container">
   <textarea class="content" placeholder="分享新鲜事..." bindinput="onInput" maxlength="140" 
   auto-focus bindfocus="onFocus" bindblur="onBlur"></textarea>
@@ -19,12 +19,12 @@
 
     <!-- +号选择图片的容器 -->
     <view class="image-wrap selectphoto" hidden="{{!selectPhoto}}" bind:tap="onChooseImage">
-      <image src="http://first-bucket20201002.oss-cn-hangzhou.aliyuncs.com/img/img/logo/add.png"style="width:200rpx;height:200rpx"></image>
+      <image src="http://first-bucket20201002.oss-cn-hangzhou.aliyuncs.com/img/img/logo/add.png"style="width:200rpx;height:200rpx" class="img"></image>
     </view>
   </view>
 </view>
 
 <view class="footer" style="bottom:{{footerBottom}}px">
   <text class="words-num">{{wordsNum}}</text>
-  <button class="send-btn">发布</button>
+  <button class="send-btn" bind:tap="send">发布</button>
 </view>
