搜索框模糊查询+评论发布功能

--- a/miniprogram/pages/find/find.wxml
+++ b/miniprogram/pages/find/find.wxml
@@ -18,6 +18,7 @@
 <block wx:for="{{blogList}}" wx:key="_id">
   <view class="blog-panel">
   <qin-blog-card blog="{{item}}" data-blogid="{{item._id}}" bind:tap="goComment" /> 
+  <qin-blog-ctrl blogId="{{item._id}}" blog="{{item}}"></qin-blog-ctrl>
   </view>
 </block>
 </view>
