--- a/miniprogram/pages/find/find.wxml
+++ b/miniprogram/pages/find/find.wxml
@@ -17,7 +17,7 @@
 <view class="container">
 <block wx:for="{{blogList}}" wx:key="_id">
   <view class="blog-panel">
-  <qin-blog-card blog="{{item}}" data-blogid="{{item._id}}" bind:tap="goComment" /> 
+  <qin-blog-card blog="{{item}}" data-blogid="{{item._id}}" bind:tap="goDetail" /> 
   <qin-blog-ctrl blogId="{{item._id}}" blog="{{item}}"></qin-blog-ctrl>
   </view>
 </block>
